Uploading all files

--- a/about.html
+++ b/about.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EDUSPHERE</title>
+    <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="/css/index.css">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -27,68 +26,7 @@
       </div>
     </nav>
 
-    <!-- Carousel Container -->
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <!-- Cloned last slide for infinite loop -->
-        <div class="carousel-slide" data-clone="last">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Actual slides -->
-        <div class="carousel-slide">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img2.jpg" alt="Image 2" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Cloned first slide for infinite loop -->
-        <div class="carousel-slide" data-clone="first">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
-      </div>
-
-      <div class="carousel-overlay">
-        <h1>EDUSPHERE</h1>
-        <p>
-          Welcome to Edusphere – Where Education Meets Innovation and Your
-          Learning Journey Begins!
-        </p>
-        <button class="overlay-button">
-          <a href="https://chat.whatsapp.com/GjMlu4QI4d83P4Tc9dwNMA">Join Us</a>
-        </button>
-      </div>
-
-      <!-- Navigation Arrows -->
-      <button class="carousel-btn prev">
-        <i class="fa-solid fa-angles-left"></i>
-      </button>
-      <button class="carousel-btn next">
-        <i class="fa-solid fa-angles-right"></i>
-      </button>
-    </div>
-    <div class="about-container">
-      <div class="about">
-        <img src="/images/logo.jpg" alt="Logo" class="logo" />
-        <div class="content">
-          <h2>About Us</h2>
-          <p>
-            At EDUSPHERE, we recognize the difficulties IT students encounter in
-            finding reliable study resources. Our platform is committed to
-            offering free, convenient access to lectures, notes, and previous
-            year question papers (PYQ) tailored specifically for IT students at
-            UIET Chandigarh, Panjab University. We aim to support their academic
-            journey by providing quality content that simplifies learning and
-            exam preparation. With EDUSPHERE, students can focus on their
-            studies without worrying about access to essential materials.
-          </p>
-        </div>
-      </div>
-    </div>
+    <div style="height: 300px; display: flex; justify-content: center; align-items: center;">Building===</div>
 
     <footer class="footer">
       <div class="footer-container">
@@ -140,6 +78,5 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
   </body>
 </html>
