--- a/content.html
+++ b/content.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EDUSPHERE</title>
+    <title>Content</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="/css/content.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -26,70 +26,42 @@
         </ul>
       </div>
     </nav>
-
-    <!-- Carousel Container -->
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <!-- Cloned last slide for infinite loop -->
-        <div class="carousel-slide" data-clone="last">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Actual slides -->
-        <div class="carousel-slide">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img2.jpg" alt="Image 2" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Cloned first slide for infinite loop -->
-        <div class="carousel-slide" data-clone="first">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
+    <div class="cont-cont">
+      <div class="heading">
+        <h2>Content</h2>
       </div>
-
-      <div class="carousel-overlay">
-        <h1>EDUSPHERE</h1>
-        <p>
-          Welcome to Edusphere – Where Education Meets Innovation and Your
-          Learning Journey Begins!
-        </p>
-        <button class="overlay-button">
-          <a href="https://chat.whatsapp.com/GjMlu4QI4d83P4Tc9dwNMA">Join Us</a>
-        </button>
-      </div>
-
-      <!-- Navigation Arrows -->
-      <button class="carousel-btn prev">
-        <i class="fa-solid fa-angles-left"></i>
-      </button>
-      <button class="carousel-btn next">
-        <i class="fa-solid fa-angles-right"></i>
-      </button>
-    </div>
-    <div class="about-container">
-      <div class="about">
-        <img src="/images/logo.jpg" alt="Logo" class="logo" />
-        <div class="content">
-          <h2>About Us</h2>
+      <div class="card-container">
+        <div class="card">
+          <h4>Comprehensive IT Content</h4>
           <p>
-            At EDUSPHERE, we recognize the difficulties IT students encounter in
-            finding reliable study resources. Our platform is committed to
-            offering free, convenient access to lectures, notes, and previous
-            year question papers (PYQ) tailored specifically for IT students at
-            UIET Chandigarh, Panjab University. We aim to support their academic
-            journey by providing quality content that simplifies learning and
-            exam preparation. With EDUSPHERE, students can focus on their
-            studies without worrying about access to essential materials.
+            Access detailed IT lectures, handwritten notes, and previous year
+            question papers (PYQs) – all available for free to enhance your
+            academic journey.
           </p>
+          <button class="card-button">
+            <a href="it.html" class="card-link">Click Here</a>
+          </button>
+        </div>
+        <div class="card">
+          <h4>GATE Preparation</h4>
+          <p>
+            Ace your GATE exams with curated IT resources, including video
+            lectures, expertly crafted notes, and solved PYQs – tailored to help
+            you succeed.
+          </p>
+          <button class="card-button">Click Here</button>
+        </div>
+        <div class="card">
+          <h4>Engage with Seniors</h4>
+          <p>
+            Learn from experienced seniors through active engagement, mentoring
+            opportunities, and insights that bridge the gap between academics
+            and practical knowledge.
+          </p>
+          <button class="card-button">Click Here</button>
         </div>
       </div>
     </div>
-
     <footer class="footer">
       <div class="footer-container">
         <!-- About Edusphere Section -->
