--- a/it.html
+++ b/it.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EDUSPHERE</title>
+    <title>IT Content</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/it.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -26,66 +26,31 @@
         </ul>
       </div>
     </nav>
-
-    <!-- Carousel Container -->
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <!-- Cloned last slide for infinite loop -->
-        <div class="carousel-slide" data-clone="last">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Actual slides -->
-        <div class="carousel-slide">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img2.jpg" alt="Image 2" />
-        </div>
-        <div class="carousel-slide">
-          <img src="/images/img3.jpg" alt="Image 3" />
-        </div>
-
-        <!-- Cloned first slide for infinite loop -->
-        <div class="carousel-slide" data-clone="first">
-          <img src="/images/img1.jpg" alt="Image 1" />
-        </div>
+    <div class="content-container">
+      <div class="it-container">
+        <h2>IT Content</h2>
+        <button onclick="openDialog()">Select Semester and Subject</button>
       </div>
+      <!-- Dialog Box -->
+      <div id="selectionDialog" class="modal">
+        <div class="modal-content">
+          <span class="close-btn" onclick="closeDialog()">&times;</span>
+          <h2>Select Your Semester and Subject</h2>
+          <form id="selectionForm">
+            <label for="semester">Select Semester:</label>
+            <select id="semester" name="semester" onchange="updateSubjects()">
+              <option value="" disabled selected>Choose a semester</option>
+              <option value="1">Semester 1</option>
+              <option value="2">Semester 2</option>
+            </select>
 
-      <div class="carousel-overlay">
-        <h1>EDUSPHERE</h1>
-        <p>
-          Welcome to Edusphere – Where Education Meets Innovation and Your
-          Learning Journey Begins!
-        </p>
-        <button class="overlay-button">
-          <a href="https://chat.whatsapp.com/GjMlu4QI4d83P4Tc9dwNMA">Join Us</a>
-        </button>
-      </div>
+            <label for="subject">Select Subject:</label>
+            <select id="subject" name="subject">
+              <option value="" disabled selected>Choose a subject</option>
+            </select>
 
-      <!-- Navigation Arrows -->
-      <button class="carousel-btn prev">
-        <i class="fa-solid fa-angles-left"></i>
-      </button>
-      <button class="carousel-btn next">
-        <i class="fa-solid fa-angles-right"></i>
-      </button>
-    </div>
-    <div class="about-container">
-      <div class="about">
-        <img src="/images/logo.jpg" alt="Logo" class="logo" />
-        <div class="content">
-          <h2>About Us</h2>
-          <p>
-            At EDUSPHERE, we recognize the difficulties IT students encounter in
-            finding reliable study resources. Our platform is committed to
-            offering free, convenient access to lectures, notes, and previous
-            year question papers (PYQ) tailored specifically for IT students at
-            UIET Chandigarh, Panjab University. We aim to support their academic
-            journey by providing quality content that simplifies learning and
-            exam preparation. With EDUSPHERE, students can focus on their
-            studies without worrying about access to essential materials.
-          </p>
+            <button type="button" onclick="submitForm()">Submit</button>
+          </form>
         </div>
       </div>
     </div>
@@ -140,6 +105,6 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="dialog.js"></script>
   </body>
 </html>
