--- a/it.html
+++ b/it.html
@@ -24,8 +24,12 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="content.html">Content</a></li>
+            <li><a href="login.html">login</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
+        </div>
+        <div class="user-icon-container" id="userIconContainer">
+          <!-- The user icon will be dynamically inserted here -->
         </div>
       </nav>
 
@@ -68,8 +72,30 @@
         </div>
 
         <!-- Content Display Section -->
-        <div id="contentDisplay" class="content-display">
-          <!-- Dynamically added content will be displayed here -->
+        <div id="contentDisplay" class="content-display"></div>
+        <div class="content-it">
+          <div class="cardcontit">
+            <div class="cardit">
+              <h4>GATE Preparation</h4>
+              <img src="/images/img4.jpg" alt="GATE PREP IMAGE" class="img4" />
+              <p>
+                Ace your GATE exams with curated IT resources, including video
+                lectures, expertly crafted notes, and solved PYQs – tailored to
+                help you succeed.
+              </p>
+              <button class="card-button">Click Here</button>
+            </div>
+            <div class="cardit">
+              <h4>Engage with Seniors</h4>
+              <img src="/images/img5.jpeg" alt="engage" class="img4" />
+              <p>
+                Learn from experienced seniors through active engagement,
+                mentoring opportunities, and insights that bridge the gap
+                between academics and practical knowledge.
+              </p>
+              <button class="card-button">Click Here</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
