--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -21,12 +21,22 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="content.html">Content</a></li>
+          <li><a href="login.html">login</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
     </nav>
 
-    <div style="height: 300px; display: flex; justify-content: center; align-items: center;">Building===</div>
+    <div
+      style="
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      Building===
+    </div>
 
     <footer class="footer">
       <div class="footer-container">
