--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,15 @@
     <!-- Navbar -->
     <nav class="navbar">
       <a href="index.html" class="name">EDUSPHERE</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="content.html">Content</a></li>
-        <li><a href="contact.html" class="active">Contact Us</a></li>
-      </ul>
+      <div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="content.html">Content</a></li>
+          <li><a href="login.html">login</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
     </nav>
 
     <!-- Contact Section -->
