--- a/content.html
+++ b/content.html
@@ -22,6 +22,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="content.html">Content</a></li>
+          <li><a href="login.html">login</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
